app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sileht
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: sileht
  labels:
    appId: appId
spec:
  ports:
  - port: 8080
    name: http
  selector:
    appId: appId
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    appId: appId
    envId: envId
    ownerId: sileht
  name: app-deploy
  namespace: sileht
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      appId: appId
      envId: envId
      ownerId: sileht
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        appId: appId
        envId: envId
        ownerId: sileht
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: QOVERY_BRANCH_NAME
          value: master
        - name: QOVERY_IS_PRODUCTION
          value: "True"
        image: jmalloc/echo-server
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 20
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        name: app-container
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 8080
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 256m
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts: []
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
      volumes: []
#---
#apiVersion: "security.istio.io/v1beta1"
#kind: "PeerAuthentication"
#metadata:
#  name: "sileht"
#  namespace: sileht
#spec:
#  mtls:
#    mode: STRICT
#---
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: namespace-isolation
#  namespace: sileht
#spec:
#  action: ALLOW
#  rules:
#  - from:
#    - source:
#        namespaces:
#        - sileht
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: sileht
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.kind.sileht.net"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: app-gateway-cert-secret-sileht
    hosts:
    - "app.kind.sileht.net"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: sileht
spec:
  hosts:
  - "app.kind.sileht.net"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: app-service
        port:
          number: 8080
